--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,21 +1,26 @@
-name: Build Android APK
+name: Build Signed APK
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
-  workflow_dispatch:  # Позволяет запускать вручную из интерфейса GitHub
+  workflow_dispatch:  # Только ручной запуск
+    inputs:
+      version:
+        description: 'Version name'
+        required: true
+        default: '1.0.0'
+
+env:
+  KEYSTORE_FILE: keystore.jks
+  KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+  KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+  KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
 
 jobs:
-  build:
+  build-signed:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -26,37 +31,23 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
     
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Create keystore file
+      if: env.KEYSTORE_PASSWORD != ''
+      run: |
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > $KEYSTORE_FILE
     
-    - name: Build Debug APK
-      run: ./gradlew assembleDebug
+    - name: Build signed APK
+      if: env.KEYSTORE_PASSWORD != ''
+      run: |
+        chmod +x gradlew
+        ./gradlew assembleRelease
+        # Или с кастомной версией:
+        # ./gradlew assembleRelease -PversionName=${{ github.event.inputs.version }}
     
-    - name: Upload Debug APK
+    - name: Upload signed APK
+      if: env.KEYSTORE_PASSWORD != ''
       uses: actions/upload-artifact@v4
       with:
-        name: ble-spam-debug-apk
-        path: app/build/outputs/apk/debug/*.apk
-        retention-days: 7
-    
-    - name: Build Release APK (optional)
-      run: ./gradlew assembleRelease
-      continue-on-error: true
-    
-    - name: Upload Release APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: ble-spam-release-apk
+        name: ble-spam-signed
         path: app/build/outputs/apk/release/*.apk
-        retention-days: 7
-        if-no-files-found: ignore
-    
-    - name: Upload build logs
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-logs
-        path: |
-          app/build/outputs/logs/
-          app/build/reports/
-        retention-days: 3
+        retention-days: 30
