--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,53 +1,74 @@
-name: Build Signed APK
+name: Build APK
 
 on:
-  workflow_dispatch:  # Только ручной запуск
-    inputs:
-      version:
-        description: 'Version name'
-        required: true
-        default: '1.0.0'
-
-env:
-  KEYSTORE_FILE: keystore.jks
-  KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
-  KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-  KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+  push:
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
-  build-signed:
+  build:
     runs-on: ubuntu-latest
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
+      
+    - name: Setup Java 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-    
+        
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-    
-    - name: Create keystore file
-      if: env.KEYSTORE_PASSWORD != ''
+      
+    - name: Make gradlew executable
+      run: chmod +x gradlew
+      
+    - name: Setup Debug Keystore
       run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > $KEYSTORE_FILE
-    
-    - name: Build signed APK
-      if: env.KEYSTORE_PASSWORD != ''
+        mkdir -p ~/.android
+        keytool -genkeypair \
+          -v \
+          -keystore ~/.android/debug.keystore \
+          -storepass android \
+          -alias androiddebugkey \
+          -keypass android \
+          -keyalg RSA \
+          -keysize 2048 \
+          -validity 10000 \
+          -dname "CN=Android Debug,O=Android,C=US"
+          
+    - name: Build Debug APK
       run: |
-        chmod +x gradlew
-        ./gradlew assembleRelease
-        # Или с кастомной версией:
-        # ./gradlew assembleRelease -PversionName=${{ github.event.inputs.version }}
-    
-    - name: Upload signed APK
-      if: env.KEYSTORE_PASSWORD != ''
+        ./gradlew assembleDebug --stacktrace
+        
+    - name: Build Release APK (if keystore provided)
+      env:
+        KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+        KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+        KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+      run: |
+        if [[ -n "${{ secrets.KEYSTORE_BASE64 }}" ]]; then
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > release.keystore
+          ./gradlew assembleRelease --stacktrace
+        else
+          echo "No release keystore provided, skipping release build"
+        fi
+        
+    - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
-        name: ble-spam-signed
+        name: ble-spam-debug
+        path: app/build/outputs/apk/debug/*.apk
+        retention-days: 30
+        
+    - name: Upload Release APK
+      if: success() && secrets.KEYSTORE_BASE64 != ''
+      uses: actions/upload-artifact@v4
+      with:
+        name: ble-spam-release
         path: app/build/outputs/apk/release/*.apk
         retention-days: 30
